[tool.poetry]
include = [{ path = "tests", format = "sdist" }]

[project]
name = "calysto-maintainer-tools"
version = "1.2.2.dev0"
description = "GitHub Actions and tools for Calysto packages"
authors = [{ name = "Calysto" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
test = ["pytest>=8.0"]
dev = ["pre-commit>=3.0", { include-group = "test" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
